<resources>
    <string name="app_name">cardinoexam</string>
    <string name="_30">30</string>
    <string name="question">Question</string>
    <string name="_50">50</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="stop">STOP</string>
    <string name="time">Time</string>
    <string name="score">Score</string>
    <string name="username">Username</string>
</resources>
